--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./assets/css/style.css">
     <title>Market</title>
 </head>
 <body>
@@ -28,7 +28,7 @@
     <!-- modal container -->
     <div id="modal-container" class="modal-container"></div>
 
-    <script src="./js/app.js"></script>
-    <script src="./js/carrito.js"></script>
+    <script src="./assets/js/app.js"></script>
+    <script src="./assets/js/carrito.js"></script>
 </body>
 </html>
